# rive-tizen

./: meson.build
example/: rive_viewer.cpp
script/: install.sh  tizen_build.diff
src/renderer/include/: thorvg_renderer.hpp
src/renderer/src/: thorvg_renderer.cpp
